--- a/app/src/main/res/drawable/bottom_sheet_back.xml
+++ b/app/src/main/res/drawable/bottom_sheet_back.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/white">
+        android:color="@color/sheet_backround_color">
     </solid>
     <corners
         android:topRightRadius="20dp"
